github工作流问题修正尝试

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -42,6 +42,9 @@ jobs:
             platform: linux/arm64
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Prepare
         run: |
           platform=${{ matrix.platform }}
