--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -420,7 +420,7 @@ x-shared-env: &shared-api-worker-env
 services:
   # API service
   api:
-    image: xuut/dify-api:v1.0.1
+    image: xuut/dify-api:latest
     restart: always
     environment:
       # Use the shared environment variables.
@@ -447,7 +447,7 @@ services:
   # worker service
   # The Celery worker for processing the queue.
   worker:
-    image: xuut/dify-api:v1.0.1
+    image: xuut/dify-api:latest
     restart: always
     environment:
       # Use the shared environment variables.
@@ -471,7 +471,7 @@ services:
 
   # Frontend web application.
   web:
-    image: xuut/dify-web:v1.0.1
+    image: xuut/dify-web:latest
     restart: always
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-}
